--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
 [ ] Show event on Single-post if have event
 [ ] Share Button
 [ ] Follow and Following system
+[ ] Follow button as ajax
 [x] Logic query event by their start date
 [x] bug when comment
 [x] Move gallery on bottom to the top
