--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
 [ ] Search nearme location
 [ ] Form submit location
 [ ] Form submit application feedback
+[ ] Change design on click location on map
 [x] < 1 = meter
 [x] Activity by friends
 [x] Remove activity
